<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_people"
            android:title="@string/drawerTxtPeople" />
        <item
            android:id="@+id/nav_nature"
            android:title="@string/drawerTxtNature" />
        <item
            android:id="@+id/nav_computer"
            android:title="@string/drawerTxtComputer" />
        <item
            android:id="@+id/nav_animals"
            android:title="@string/drawerTxtAnimals" />
        <item
            android:id="@+id/nav_transportation"
            android:title="@string/drawerTxtTransportation" />
    </group>

</menu>
